Fixing input zoom on ios

--- a/public/styles.css
+++ b/public/styles.css
@@ -221,75 +221,6 @@ hr.style-four {
 	margin-left: 10%;
 }
 
-#chatbox {
-	border-radius: 4px;
-	border: 1px solid #221d23;
-	height: 330px;
-	width: 50%;
-	min-width: 600px;
-	-webkit-transition: 200ms linear 0s;  
-    -moz-transition: 200ms linear 0s;  
-    -o-transition: 200ms linear 0s;  
-	transition: 200ms linear 0s; 
-	font-family: 'Montserrat', sans-serif !important;
-	font-size: 16px;
-	padding: 6px;
-}
-
-#chatbox:focus, #chatbox:hover {
-	outline: none;
-    border: 1px solid #e7dc9e;
-    box-shadow: 0px 0px 8px #e7dc9e;
-    -moz-box-shadow: 0px 0px 8px #e7dc9e;
-	-webkit-box-shadow: 0px 0px 8px #e7dc9e;
-	-webkit-transition: 200ms linear 0s;  
-    -moz-transition: 200ms linear 0s;  
-    -o-transition: 200ms linear 0s;  
-	transition: 200ms linear 0s; 
-	font-family: 'Montserrat', sans-serif !important;
-	font-size: 16px;
-	padding: 6px;
-}
-
-.inputClass {
-	border-radius: 4px;
-	border: 1px solid #221d23;
-	height: 46px;
-	-webkit-transition: 200ms linear 0s;  
-    -moz-transition: 200ms linear 0s;  
-    -o-transition: 200ms linear 0s;  
-	transition: 200ms linear 0s; 
-	font-family: 'Montserrat', sans-serif !important;
-	font-size: 16px;
-	padding-left: 6px;
-}
-
-.inputClass:focus, .inputClass:hover  {
-	height: 46px;
-	outline: none;
-    border: 1px solid #e7dc9e;
-    box-shadow: 0px 0px 8px #e7dc9e;
-    -moz-box-shadow: 0px 0px 8px #e7dc9e;
-	-webkit-box-shadow: 0px 0px 8px #e7dc9e;
-	-webkit-transition: 200ms linear 0s;  
-    -moz-transition: 200ms linear 0s;  
-    -o-transition: 200ms linear 0s;  
-	transition: 200ms linear 0s; 
-	font-family: 'Montserrat', sans-serif !important;
-	font-size: 16px;
-	padding-left: 6px;
-}
-
-.buttonClass {
-	background-color: #e86726;
-	border: none;
-	border-radius: 4px;
-	color: #ffffff;
-	min-width: 150px;
-	width: 12.5%;
-	height: 50px;
-}
-
 #searchbox{
 	margin-left: 10%;
 	border-radius: 4px;
@@ -304,20 +235,6 @@ hr.style-four {
 	color: #ffffff;
 	width: 150px;
 	height: 50px;
-}
-
-.buttonClass:hover, .buttonClass:focus {
-	background-color: #ffd171;
-	border: none;
-	outline:0;
-	border-radius: 4px;
-	color: #ffffff;
-	width: 150px;
-	height: 50px;
-	-webkit-transition: 200ms linear 0s;  
-    -moz-transition: 200ms linear 0s;  
-    -o-transition: 200ms linear 0s;  
-    transition: 200ms linear 0s; 
 }
 
 #joinRandomBtn {
@@ -382,10 +299,100 @@ hr.style-four {
 	margin: 0 auto;
 }
 
+/*
+CHAT STYLES
+*/
 hr.chat-hr {
 	border: 2px solid #221d23;
 	min-width: 608px;
 	width: 50%;
+}
+
+#chatbox {
+	border-radius: 4px;
+	border: 1px solid #221d23;
+	height: 330px;
+	width: 50%;
+	min-width: 600px;
+	-webkit-transition: 200ms linear 0s;  
+    -moz-transition: 200ms linear 0s;  
+    -o-transition: 200ms linear 0s;  
+	transition: 200ms linear 0s; 
+	font-family: 'Montserrat', sans-serif !important;
+	font-size: 16px;
+	padding: 6px;
+}
+
+#chatbox:focus, #chatbox:hover {
+	outline: none;
+    border: 1px solid #e7dc9e;
+    box-shadow: 0px 0px 8px #e7dc9e;
+    -moz-box-shadow: 0px 0px 8px #e7dc9e;
+	-webkit-box-shadow: 0px 0px 8px #e7dc9e;
+	-webkit-transition: 200ms linear 0s;  
+    -moz-transition: 200ms linear 0s;  
+    -o-transition: 200ms linear 0s;  
+	transition: 200ms linear 0s; 
+	font-family: 'Montserrat', sans-serif !important;
+	font-size: 16px;
+	padding: 6px;
+}
+
+.inputClass {
+	border-radius: 4px;
+	border: 1px solid #221d23;
+	height: 46px;
+	-webkit-transition: 200ms linear 0s;  
+    -moz-transition: 200ms linear 0s;  
+    -o-transition: 200ms linear 0s;  
+	transition: 200ms linear 0s; 
+	font-family: 'Montserrat', sans-serif !important;
+	font-size: 16px;
+	padding-left: 6px;
+}
+
+.inputClass:focus, .inputClass:hover  {
+	height: 46px;
+	outline: none;
+    border: 1px solid #e7dc9e;
+    box-shadow: 0px 0px 8px #e7dc9e;
+    -moz-box-shadow: 0px 0px 8px #e7dc9e;
+	-webkit-box-shadow: 0px 0px 8px #e7dc9e;
+	-webkit-transition: 200ms linear 0s;  
+    -moz-transition: 200ms linear 0s;  
+    -o-transition: 200ms linear 0s;  
+	transition: 200ms linear 0s; 
+	font-family: 'Montserrat', sans-serif !important;
+	font-size: 16px;
+	padding-left: 6px;
+}
+
+input[type="text"] {
+	font-size: 16px;
+}
+
+.buttonClass {
+	background-color: #e86726;
+	border: none;
+	border-radius: 4px;
+	color: #ffffff;
+	min-width: 150px;
+	width: 12.5%;
+	height: 50px;
+}
+
+.buttonClass:hover, .buttonClass:focus {
+	background-color: #ffd171;
+	border: none;
+	outline:0;
+	border-radius: 4px;
+	color: #ffffff;
+	width: 150px;
+	height: 50px;
+	-webkit-transition: 200ms linear 0s;  
+    -moz-transition: 200ms linear 0s;  
+    -o-transition: 200ms linear 0s;  
+    transition: 200ms linear 0s; 
 }
 
 .typing {
